--- a/styles/main.styles.css
+++ b/styles/main.styles.css
@@ -87,14 +87,49 @@ a.remove-focus {
   text-decoration: underline;
 }
 
-.logo-inside-main {
+.main-nav {
+  z-index: 2;
+}
+
+.header {
+  z-index: 3;
+}
+
+.landingpage-main-info {
+  height: calc(100vh - 11rem);
+}
+
+.landingpage-background-img {
+  z-index: 1;
   position: absolute;
-  z-index: -1;
-  width: 30%;
-  aspect-ratio: 1 / 1;
+  top: 0;
+  right: 5em;
+  width: calc(50% - 7rem);
+  height: calc(100% - 5rem);
   background-size: cover;
   background-position: center;
-  filter: opacity(0.2) grayscale(0.5) brightness(1.2);
+}
+
+.view-more-btn:hover .view-more-icon {
+  animation: bounce 0.6s linear infinite;
+}
+
+@-webkit-keyframes bounce {
+  50% {
+    margin-top: -15px;
+  }
+  100% {
+    margin-top: 0;
+  }
+}
+
+@keyframes bounce {
+  50% {
+    margin-top: -15px;
+  }
+  100% {
+    margin-top: 0;
+  }
 }
 
 @-webkit-keyframes spinner {
