revamp landing page

--- a/styles/main.styles.css
+++ b/styles/main.styles.css
@@ -47,7 +47,7 @@ div.class-container {
   flex-direction: column;
 }
 
-div.class-container * div.img-container::before {
+div.news-container div.img-container::before {
   content: "";
   position: absolute;
   bottom: 0;
@@ -69,7 +69,8 @@ div.img-container img {
   cursor: pointer;
 }
 
-div.img-container:hover img {
+div.img-container:hover img,
+div.news-more:hover img {
   transform: scale(1.01);
 }
 
@@ -78,13 +79,52 @@ div.img-container {
   overflow: hidden;
 }
 
+div.news-more {
+  position: relative;
+}
+
+div.news-container span.see-more {
+  position: absolute;
+  left: 50%;
+  top: 60%;
+  color: #fff;
+  transform: translate(-50%, -50%);
+  z-index: 99;
+  font-family: abel;
+  font-size: 1.5em;
+}
+
+div.class-container * div.img-container::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  display: block;
+  background: linear-gradient(transparent, black);
+  height: 100px;
+  width: 100%;
+  border-radius: 10px;
+  z-index: 1;
+}
+
+div.news-container:hover span.see-more {
+  text-decoration: underline;
+}
+
+div.news-more::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  display: block;
+  background: linear-gradient(transparent, black);
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  z-index: 1;
+}
+
 a.remove-focus {
   outline: none;
   color: inherit;
-}
-
-.more-news:hover .img-label {
-  text-decoration: underline;
 }
 
 .main-nav {
@@ -100,18 +140,9 @@ a.remove-focus {
 }
 
 .landingpage-background-img {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  right: 5em;
-  width: calc(50% - 7rem);
-  height: calc(100% - 5rem);
+  width: calc(50% - 15rem);
   background-size: cover;
   background-position: center;
-}
-
-.view-more-btn:hover .view-more-icon {
-  animation: bounce 0.6s linear infinite;
 }
 
 .social-links {
@@ -120,24 +151,11 @@ a.remove-focus {
 
 .social-links:hover {
   transform: translateY(-0.2em) scale(1.05);
+  color: #3498db;
 }
 
-@-webkit-keyframes bounce {
-  50% {
-    margin-top: -15px;
-  }
-  100% {
-    margin-top: 0;
-  }
-}
-
-@keyframes bounce {
-  50% {
-    margin-top: -15px;
-  }
-  100% {
-    margin-top: 0;
-  }
+.complain-btn:hover {
+  background-color: #4874dc;
 }
 
 @-webkit-keyframes spinner {
