updated login and minot fix and optimization

--- a/styles/main.styles.css
+++ b/styles/main.styles.css
@@ -1,5 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Abel&display=swap");
 
+.main-body-complain {
+  background: url("/bg-pic2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.main-body-complain::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  display: block;
+  background: linear-gradient(#111 1%, transparent);
+  height: 80px;
+  width: 100%;
+  border-radius: 10px;
+  z-index: 1;
+}
+
+.login-loc {
+  position: absolute;
+  padding: 20px;
+  font-size: 1.7em;
+  font-family: "abel";
+  color: #fff;
+  z-index: 99;
+  cursor: pointer;
+}
+
+.login-loc:hover {
+  text-decoration: underline;
+  color: #fff;
+}
+
 .label-under {
   position: relative;
   display: inline;
